--- a/Makefile.ffmpeg-cross
+++ b/Makefile.ffmpeg-cross
@@ -42,22 +42,22 @@ patches:
 	chmod a+x patches/uname
 
 dezi.build32.done: patches sandbox/mingw-w64-build-3.1.0
-	#cd sandbox; ./mingw-w64-build-3.1.0 --cpu-count=2 --build-type=win32 --mingw-w64-ver=svn --disable-nls --disable-shared --default-configure --clean-build --threads=pthreads-w32 || exit 1
+	cd sandbox; ./mingw-w64-build-3.1.0 --cpu-count=2 --build-type=win32 --mingw-w64-ver=svn --disable-nls --disable-shared --default-configure --clean-build --threads=pthreads-w32 || exit 1
 	touch dezi.build32.done
 
 dezi.build64.done: patches sandbox/mingw-w64-build-3.1.0
-	#cd sandbox; ./mingw-w64-build-3.1.0 --cpu-count=2 --build-type=win64 --mingw-w64-ver=svn --disable-nls --disable-shared --default-configure --clean-build --threads=pthreads-w32 || exit 1
+	cd sandbox; ./mingw-w64-build-3.1.0 --cpu-count=2 --build-type=win64 --mingw-w64-ver=svn --disable-nls --disable-shared --default-configure --clean-build --threads=pthreads-w32 || exit 1
 	touch dezi.build64.done
 
 dezi.ffmpeg32.done: cross_compile_ffmpeg_dezi.sh
 	export PATH="$$PWD/patches:$$PATH"; \
-	./cross_compile_ffmpeg_dezi.sh --sandbox-ok=y || exit 1
-	touch dezi.ffmpeg32.done
+	#./cross_compile_ffmpeg_dezi.sh --sandbox-ok=y || exit 1
+	#touch dezi.ffmpeg32.done
 
 dezi.ffmpeg64.done: cross_compile_ffmpeg_dezi.sh
 	export PATH="$$PWD/patches:$$PATH"; \
-	./cross_compile_ffmpeg_dezi.sh --sandbox-ok=y || exit 1
-	touch dezi.ffmpeg64.done
+	#./cross_compile_ffmpeg_dezi.sh --sandbox-ok=y || exit 1
+	#touch dezi.ffmpeg64.done
 
 ffmpeg-win32-work: dezi.build32.done dezi.ffmpeg32.done
 
@@ -65,7 +65,7 @@ ffmpeg-win64-work: dezi.build64.done dezi.ffmpeg64.done
 	
 #####################################################################
 #
-# mingw
+# mingw => get the original build compile script from web.
 #
 
 sandbox:
@@ -75,7 +75,8 @@ sandbox/mingw-w64-build-3.1.0: sandbox
 	cd sandbox; \
 	curl http://zeranoe.com/scripts/mingw_w64_build/mingw-w64-build-3.1.0 -O || exit 1; \
 	chmod a+x mingw-w64-build-3.1.0; \
-	sed -i 's/grep -c processor \/proc\/cpuinfo/grep -s -c processor \/proc\/cpuinfo || echo 2/g' mingw-w64-build-3.1.0
+	sed -i 's/grep -c processor \/proc\/cpuinfo/echo 2/g' mingw-w64-build-3.1.0 ;\
+	#sed -i 's/grep -c processor \/proc\/cpuinfo/grep -s -c processor \/proc\/cpuinfo || echo 2/g' mingw-w64-build-3.1.0
 	
 #####################################################################
 #
@@ -84,8 +85,9 @@ sandbox/mingw-w64-build-3.1.0: sandbox
 
 cross_compile_ffmpeg.sh:
 	wget https://raw.github.com/rdp/ffmpeg-windows-build-helpers/master/cross_compile_ffmpeg.sh
-	sed -i 's/grep -c processor \/proc\/cpuinfo/grep -s -c processor \/proc\/cpuinfo || echo 2/g' cross_compile_ffmpeg.sh
 	chmod a+x cross_compile_ffmpeg.sh
+	sed -i 's/grep -c processor \/proc\/cpuinfo/echo 2/g' cross_compile_ffmpeg.sh
+	#sed -i 's/grep -c processor \/proc\/cpuinfo/grep -s -c processor \/proc\/cpuinfo || echo 2/g' cross_compile_ffmpeg.sh
 
 #####################################################################
 #
