--- a/Makefile.local
+++ b/Makefile.local
@@ -1323,15 +1323,15 @@ $(gpac):
 $(gpac)/dezi.done:
 	cd $(gpac); \
 	export PKG_CONFIG_PATH="/usr/local/lib/pkgconfig"; \
-	sed -i "s/LINKFLAGS+=-lgpac_static/LINKFLAGS+=-static -lgpac_static/g" applications/mp4box/Makefile; \
+	#sed -i "s/LINKFLAGS+=-lgpac_static/LINKFLAGS+=-static -lgpac_static/g" applications/mp4box/Makefile; \
 	./configure \
 		--static-mp4box \
 		--use-xvid=no \
 		--use-ffmpeg=no \
-		--extra-libs="-L/usr/local/lib -lz -lm" \
+		--extra-libs="/usr/local/lib/libz.a -lm" \
 		|| exit; \
-	make || exit; \
-	sudo make install; \
+	cd src; make || exit; cd ..; \
+	cd applications/mp4box; make || exit; cd ../..; \
 	touch dezi.done
 
 gpac: $(gpac) $(gpac)/dezi.done
