Fixes for CentOS.

--- a/Makefile.ffmpeg-cross
+++ b/Makefile.ffmpeg-cross
@@ -42,20 +42,23 @@ patches:
 	chmod a+x patches/uname
 
 dezi.build32.done: patches sandbox/mingw-w64-build-3.1.0
-	cd sandbox; ./mingw-w64-build-3.1.0 \
-		--cpu-count=2 --build-type=win32 \
-		--mingw-w64-ver=svn --disable-nls \
-		--disable-shared --default-configure \
-		--clean-build --threads=pthreads-w32 || exit 1
+	if ! [ -f "dezi.build32.done" ]; then \
+		cd sandbox; ./mingw-w64-build-3.1.0 \
+			--cpu-count=2 --build-type=win32 \
+			--mingw-w64-ver=svn --disable-nls \
+			--disable-shared --default-configure \
+			--clean-build --threads=pthreads-w32 || exit 1; \
+	fi
 	touch dezi.build32.done
 
 dezi.build64.done: patches sandbox/mingw-w64-build-3.1.0
-	echo "will dat 32"
-	cd sandbox; ./mingw-w64-build-3.1.0 \
-		--cpu-count=2 --build-type=win64 \
-		--mingw-w64-ver=svn --disable-nls \
-		--disable-shared --default-configure \
-		--clean-build --threads=pthreads-w32 || exit 1
+	if ! [ -f "dezi.build64.done" ]; then \
+		cd sandbox; ./mingw-w64-build-3.1.0 \
+			--cpu-count=2 --build-type=win64 \
+			--mingw-w64-ver=svn --disable-nls \
+			--disable-shared --default-configure \
+			--clean-build --threads=pthreads-w32 || exit 1; \
+	fi
 	touch dezi.build64.done
 
 dezi.ffmpeg32.done: cross_compile_ffmpeg_dezi.sh
